--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -126,7 +126,8 @@ jobs:
           path: ./wheelhouse/*.whl
 
   build_linux_arm:
-    name: Linux 38,39,310,311 armv7l
+    if: false
+    name: Linux 37,38,39,310,311 armv7l
     runs-on: ubuntu-latest
 
     steps:
