--- a/Dockerfile.armv7l
+++ b/Dockerfile.armv7l
@@ -25,7 +25,7 @@ RUN mkdir build3.10 && \
     pip3.10 wheel ..
 RUN mkdir build3.11 && \
     cd build3.11 && \
-    pip3.11 wheel -r ....
+    pip3.11 wheel ..
 
 RUN cd build3.7 && auditwheel repair *armv7l.whl && \
     cd build3.8 && auditwheel repair *armv7l.whl && \
