--- a/Dockerfile.armv7l
+++ b/Dockerfile.armv7l
@@ -1,10 +1,6 @@
 FROM ghcr.io/bjia56/armv7l-wheel-builder:main
 
-ENV PATH=$PATH:/usr/local/go/bin
-RUN curl -o go.tar.gz https://dl.google.com/go/go1.19.3.linux-armv6l.tar.gz && \
-    tar -C /usr/local -xzf go.tar.gz && \
-    rm go.tar.gz && \
-    go install github.com/go-python/gopy@v0.4.5 && \
+RUN go install github.com/go-python/gopy@v0.4.5 && \
     go install golang.org/x/tools/cmd/goimports@latest
 
 RUN mkdir build
