--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -4,7 +4,7 @@ on: [ push, pull_request ]
 
 jobs:
   build_macos_310_311:
-    if: false
+    #if: false
     name: MacOS 310,311 x86_64,arm64
     strategy:
       matrix:
@@ -63,7 +63,7 @@ jobs:
 
 
   build_macos_38_39_x86_64:
-    if: false
+    #if: false
     name: MacOS 38,39 x86_64
     runs-on: macos-10.15
 
@@ -128,7 +128,7 @@ jobs:
           path: ./wheelhouse/*.whl
 
   build_linux_arm:
-    if: false
+    #if: false
     name: Linux 37,38,39,310,311 armv7l
     runs-on: ubuntu-latest
 
