--- a/Dockerfile.armv7l
+++ b/Dockerfile.armv7l
@@ -7,27 +7,8 @@ RUN mkdir build
 WORKDIR build
 COPY . .
 
-RUN mkdir build3.7 && \
-    cd build3.7 && \
-    pip3.7 wheel ..
-RUN mkdir build3.8 && \
-    cd build3.8 && \
-    pip3.8 wheel ..
-RUN mkdir build3.9 && \
-    cd build3.9 && \
-    pip3.9 wheel ..
-RUN mkdir build3.10 && \
-    cd build3.10 && \
-    pip3.10 wheel ..
-RUN mkdir build3.11 && \
-    cd build3.11 && \
-    pip3.11 wheel ..
+RUN ./scripts/concurrent_wheels.sh
 
-RUN cd build3.7 && auditwheel repair *armv7l.whl && cd .. && \
-    cd build3.8 && auditwheel repair *armv7l.whl && cd .. && \
-    cd build3.9 && auditwheel repair *armv7l.whl && cd .. && \
-    cd build3.10 && auditwheel repair *armv7l.whl && cd .. && \
-    cd build3.11 && auditwheel repair *armv7l.whl
 RUN mkdir /export && \
     cp build3.7/wheelhouse/*.whl /export && \
     cp build3.8/wheelhouse/*.whl /export && \
