small tweaks + back to 0.0.1 for publishing

--- a/Dockerfile.armv7l
+++ b/Dockerfile.armv7l
@@ -7,7 +7,7 @@ RUN mkdir build
 WORKDIR build
 COPY . .
 
-RUN ./scripts/concurrent_wheels.sh
+RUN ./scripts/build_wheels.sh
 
 RUN mkdir /export && \
     cp build3.7/wheelhouse/*.whl /export && \
