--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -184,6 +184,9 @@ jobs:
       - name: install goimports
         run: go install golang.org/x/tools/cmd/goimports@latest
 
+      - name: fetch dependencies
+        run: go mod download
+
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.11.2
         env:
