use upstream gopy

--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -119,7 +119,7 @@ jobs:
           CIBW_BEFORE_ALL_LINUX: |
             curl -o go.tar.gz https://dl.google.com/go/go1.19.3.linux-amd64.tar.gz
             tar -C /usr/local -xzf go.tar.gz
-            go install github.com/bjia56/gopy@e2438d4c1e2b6cd0203fd21ed90d3506889152a7
+            go install github.com/go-python/gopy@v0.4.5
             go install golang.org/x/tools/cmd/goimports@latest
 
       - name: Upload Artifacts
@@ -179,13 +179,10 @@ jobs:
           go-version: "1.19.x"
 
       - name: install gopy
-        run: go install github.com/bjia56/gopy@e2438d4c1e2b6cd0203fd21ed90d3506889152a7
+        run: go install github.com/go-python/gopy@v0.4.5
 
       - name: install goimports
         run: go install golang.org/x/tools/cmd/goimports@latest
-
-      - name: fetch dependencies
-        run: go mod download -x
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.11.2
