--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -101,7 +101,7 @@ jobs:
 
 
   build_linux_x86_64:
-    #if: false
+    if: false
     name: Linux 37,38,39,310,311 x86_64
     runs-on: ubuntu-20.04
 
@@ -179,7 +179,7 @@ jobs:
           go-version: "1.19.x"
 
       - name: install gopy
-        run: go install github.com/go-python/gopy@v0.4.5
+        run: go install github.com/bjia56/gopy@b676e2a6143bae9feaae8593c4798a6d80244a2a
 
       - name: install goimports
         run: go install golang.org/x/tools/cmd/goimports@latest
