--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -167,7 +167,7 @@ jobs:
           path: /tmp/output/*.whl
 
   build_windows:
-    name: Windows, 3x, x86_64
+    name: Windows 37,38,39,310,311 x86_64
     runs-on: windows-2019
 
     steps:
@@ -187,8 +187,8 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.11.2
         env:
-          CIBW_BUILD: "cp38-*"
-          CIBW_SKIP: "cp36-* cp37-*"
+          CIBW_BUILD: "cp3*"
+          CIBW_SKIP: "cp36-*"
           CIBW_ARCHS: "native"
           CIBW_ENVIRONMENT: >
             GOARCH=amd64
