--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -179,7 +179,13 @@ jobs:
           go-version: "1.19.x"
 
       - name: install gopy
-        run: go install github.com/bjia56/gopy@897f2fc6bffd2fb0dc0db19ca8bce03f169380de
+        run: |
+          cd /tmp
+          git clone https://github.com/bjia56/gopy
+          cd gopy
+          git checkout v0.4.5+bjia56.v1
+          go install -v
+          gopy
 
       - name: install goimports
         run: go install golang.org/x/tools/cmd/goimports@latest
