--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -1,6 +1,10 @@
 name: Build
 
-on: [ push, pull_request ]
+on:
+  push:
+    branches: ["master"]
+  pull_request:
+  workflow_dispatch:
 
 jobs:
   build_macos_310_311:
