--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -1,6 +1,10 @@
 name: Build
 
-on: [ push, pull_request ]
+on:
+  push:
+    branches: ["master"]
+  pull_request:
+  workflow_dispatch:
 
 jobs:
   build_macos_310_311:
@@ -101,6 +105,7 @@ jobs:
 
 
   build_linux_x86_64:
+    #if: false
     name: Linux 37,38,39,310,311 x86_64
     runs-on: ubuntu-20.04
 
@@ -128,7 +133,7 @@ jobs:
           path: ./wheelhouse/*.whl
 
   build_linux_arm:
-    if: false
+    #if: false
     name: Linux 37,38,39,310,311 armv7l
     runs-on: ubuntu-latest
 
@@ -164,3 +169,43 @@ jobs:
         with:
           name: wheels
           path: /tmp/output/*.whl
+
+  build_windows:
+    #if: false
+    name: Windows 37,38,39,310,311 x86_64
+    runs-on: windows-2019
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: "1.19.x"
+
+      - name: install gopy
+        run: |
+          cd $env:TEMP
+          git clone https://github.com/bjia56/gopy
+          cd gopy
+          git checkout v0.4.5+bjia56.v1
+          go install -v
+          gopy
+
+      - name: install goimports
+        run: go install golang.org/x/tools/cmd/goimports@latest
+
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v2.11.2
+        env:
+          CIBW_BUILD: "cp3*"
+          CIBW_SKIP: "cp36-*"
+          CIBW_ARCHS: "native"
+          CIBW_ENVIRONMENT: >
+            GOARCH=amd64
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: wheels
+          path: ./wheelhouse/*.whl
