--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -16,7 +16,7 @@ jobs:
         arch_cibw_go:
           - [ "x86_64", "amd64" ]
           - [ "arm64", "arm64" ]
-    runs-on: macos-11
+    runs-on: MacOS-10.15
     steps:
       - uses: actions/checkout@v3
 
