--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -16,7 +16,7 @@ jobs:
         arch_cibw_go:
           - [ "x86_64", "amd64" ]
           - [ "arm64", "arm64" ]
-    runs-on: MacOS-10.15
+    runs-on: MacOS-12
     steps:
       - uses: actions/checkout@v3
 
@@ -58,6 +58,7 @@ jobs:
           CIBW_ENVIRONMENT: >
             PATH=$PATH:/usr/local/go/bin
           CIBW_BUILD: "${{ matrix.python_version }}-*"
+          MACOSX_DEPLOYMENT_TARGET: "10.12"
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
@@ -69,7 +70,7 @@ jobs:
   build_macos_38_39_x86_64:
     #if: false
     name: MacOS 38,39 x86_64
-    runs-on: macos-10.15
+    runs-on: macos-12
 
     steps:
       - uses: actions/checkout@v3
@@ -96,6 +97,7 @@ jobs:
           CIBW_BEFORE_ALL_MACOS: |
             curl -o python.pkg https://www.python.org/ftp/python/3.9.12/python-3.9.12-macosx10.9.pkg
             sudo installer -pkg python.pkg -target /
+          MACOSX_DEPLOYMENT_TARGET: "10.12"
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
