--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -7,9 +7,9 @@ on:
   workflow_dispatch:
 
 jobs:
-  build_macos_310_311:
+  build_macos_11:
     #if: false
-    name: MacOS 310,311 x86_64,arm64
+    name: MacOS 11 310,311 x86_64,arm64
     strategy:
       matrix:
         python_version: [ "cp310", "cp311" ]
@@ -66,9 +66,9 @@ jobs:
           path: ./wheelhouse/*.whl
 
 
-  build_macos_38_39_x86_64:
+  build_macos_10:
     #if: false
-    name: MacOS 38,39 x86_64
+    name: MacOS 10.15 38,39,310,311 x86_64
     runs-on: macos-10.15
 
     steps:
@@ -88,7 +88,7 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.11.2
         env:
-          CIBW_BUILD: "cp38-macosx_x86_64 cp39-macosx_x86_64"
+          CIBW_BUILD: "cp38-macosx_x86_64 cp39-macosx_x86_64 cp310-macosx_x86_64 cp311-macosx_x86_64"
           CIBW_ARCHS: "native"
           CIBW_ENVIRONMENT: >
             PATH=$PATH:/usr/local/go/bin
