--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -85,9 +85,9 @@ jobs:
       - name: install goimports
         run: go install golang.org/x/tools/cmd/goimports@latest
   
-      - name: install python 3.10
+      - name: install python 3.9
         run: |
-          curl -o python.pkg https://www.python.org/ftp/python/3.10.9/python-3.10.9-macos11.pkg
+          curl -o python.pkg https://www.python.org/ftp/python/3.9.12/python-3.9.12-macosx10.9.pkg
           sudo installer -pkg python.pkg -target /
 
       - name: Build wheels
