--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -12,7 +12,7 @@ jobs:
     name: MacOS 11 ${{ matrix.arch_cibw_go[0] }}
     strategy:
       matrix:
-        python_version: [ "cp310", "cp311" ]
+        python_version: [ "cp38", "cp39", "cp310", "cp311" ]
         arch_cibw_go:
           - [ "x86_64", "amd64" ]
           - [ "arm64", "arm64" ]
@@ -30,6 +30,20 @@ jobs:
 
       - name: install goimports
         run: go install golang.org/x/tools/cmd/goimports@latest
+
+      - name: install python 3.8
+        if: matrix.python_version == 'cp38'
+        run: |
+          curl -o python.pkg https://www.python.org/ftp/python/3.8.10/python-3.8.10-macos11.pkg
+          sudo installer -pkg python.pkg -target /
+          ln -s /usr/local/opt/python@3.8/bin/python3.8 /usr/local/bin/python_for_build
+
+      - name: install python 3.9
+        if: matrix.python_version == 'cp39'
+        run: |
+          curl -o python.pkg https://www.python.org/ftp/python/3.9.12/python-3.9.12-macos11.pkg
+          sudo installer -pkg python.pkg -target /
+          ln -s /usr/local/opt/python@3.10/bin/python3.10 /usr/local/bin/python_for_build
 
       - name: install python 3.10
         if: matrix.python_version == 'cp310'
