--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build_macos_11:
     #if: false
-    name: MacOS 11 ${{ matrix.arch_cibw_go[0] }}
+    name: MacOS 11 ${{ matrix.python_version }} ${{ matrix.arch_cibw_go[0] }}
     strategy:
       matrix:
         python_version: [ "cp38", "cp39", "cp310", "cp311" ]
@@ -37,13 +37,15 @@ jobs:
           curl -o python.pkg https://www.python.org/ftp/python/3.8.10/python-3.8.10-macos11.pkg
           sudo installer -pkg python.pkg -target /
           ln -s /usr/local/opt/python@3.8/bin/python3.8 /usr/local/bin/python_for_build
+          stat /usr/local/bin/python_for_build
 
       - name: install python 3.9
         if: matrix.python_version == 'cp39'
         run: |
           curl -o python.pkg https://www.python.org/ftp/python/3.9.12/python-3.9.12-macos11.pkg
           sudo installer -pkg python.pkg -target /
-          ln -s /usr/local/opt/python@3.10/bin/python3.10 /usr/local/bin/python_for_build
+          ln -s /usr/local/opt/python@3.9/bin/python3.9 /usr/local/bin/python_for_build
+          stat /usr/local/bin/python_for_build
 
       - name: install python 3.10
         if: matrix.python_version == 'cp310'
@@ -51,6 +53,7 @@ jobs:
           curl -o python.pkg https://www.python.org/ftp/python/3.10.8/python-3.10.8-macos11.pkg
           sudo installer -pkg python.pkg -target /
           ln -s /usr/local/opt/python@3.10/bin/python3.10 /usr/local/bin/python_for_build
+          stat /usr/local/bin/python_for_build
 
       - name: install python 3.11
         if: matrix.python_version == 'cp311'
@@ -58,6 +61,7 @@ jobs:
           curl -o python.pkg https://www.python.org/ftp/python/3.11.0/python-3.11.0-macos11.pkg
           sudo installer -pkg python.pkg -target /
           ln -s /usr/local/opt/python@3.11/bin/python3.11 /usr/local/bin/python_for_build
+          stat /usr/local/bin/python_for_build
 
       - name: install cibuildwheel and pybindgen
         run: /usr/local/bin/python_for_build -m pip install cibuildwheel==2.11.2 pybindgen
@@ -82,7 +86,7 @@ jobs:
 
   build_macos_10:
     #if: false
-    name: MacOS 10.15 x86_64
+    name: MacOS 10.15 cp38,cp39 x86_64
     runs-on: macos-10.15
 
     steps:
@@ -124,7 +128,7 @@ jobs:
 
   build_linux_x86_64:
     #if: false
-    name: Linux x86_64
+    name: Linux cp38,cp39,cp310,cp311 x86_64
     runs-on: ubuntu-20.04
 
     steps:
@@ -152,7 +156,7 @@ jobs:
 
   build_linux_arm:
     #if: false
-    name: Linux armv7l
+    name: Linux cp38,cp39,cp310,cp311 armv7l
     runs-on: ubuntu-latest
 
     steps:
@@ -190,7 +194,7 @@ jobs:
 
   build_windows:
     #if: false
-    name: Windows x86_64
+    name: Windows cp38,cp39,cp310,cp311 x86_64
     runs-on: windows-2019
 
     steps:
