--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -223,8 +223,7 @@ jobs:
           CIBW_BUILD: "cp3*"
           CIBW_SKIP: "cp36-*"
           CIBW_ARCHS: "native"
-          CIBW_ENVIRONMENT: >
-            GOARCH=amd64
+          GOARCH: "amd64"
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
