--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -11,6 +11,7 @@ jobs:
     #if: false
     name: MacOS 11 ${{ matrix.python_version }} ${{ matrix.arch_cibw_go[0] }}
     strategy:
+      fail-fast: false
       matrix:
         python_version: [ "cp38", "cp39", "cp310", "cp311" ]
         arch_cibw_go:
@@ -35,7 +36,7 @@ jobs:
         if: matrix.python_version == 'cp38'
         run: |
           curl -o python.pkg https://www.python.org/ftp/python/3.8.10/python-3.8.10-macos11.pkg
-          sudo installer -pkg python.pkg -target /
+          sudo installer -verbose -pkg python.pkg -target /
           ln -s /usr/local/opt/python@3.8/bin/python3.8 /usr/local/bin/python_for_build
           stat /usr/local/bin/python_for_build
 
@@ -43,7 +44,7 @@ jobs:
         if: matrix.python_version == 'cp39'
         run: |
           curl -o python.pkg https://www.python.org/ftp/python/3.9.12/python-3.9.12-macos11.pkg
-          sudo installer -pkg python.pkg -target /
+          sudo installer -verbose -pkg python.pkg -target /
           ln -s /usr/local/opt/python@3.9/bin/python3.9 /usr/local/bin/python_for_build
           stat /usr/local/bin/python_for_build
 
@@ -51,7 +52,7 @@ jobs:
         if: matrix.python_version == 'cp310'
         run: |
           curl -o python.pkg https://www.python.org/ftp/python/3.10.8/python-3.10.8-macos11.pkg
-          sudo installer -pkg python.pkg -target /
+          sudo installer -verbose -pkg python.pkg -target /
           ln -s /usr/local/opt/python@3.10/bin/python3.10 /usr/local/bin/python_for_build
           stat /usr/local/bin/python_for_build
 
@@ -59,7 +60,7 @@ jobs:
         if: matrix.python_version == 'cp311'
         run: |
           curl -o python.pkg https://www.python.org/ftp/python/3.11.0/python-3.11.0-macos11.pkg
-          sudo installer -pkg python.pkg -target /
+          sudo installer -verbose -pkg python.pkg -target /
           ln -s /usr/local/opt/python@3.11/bin/python3.11 /usr/local/bin/python_for_build
           stat /usr/local/bin/python_for_build
 
