--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build_macos_11:
     #if: false
-    name: MacOS 11 cp38,cp39,cp310,cp311 ${{ matrix.arch_cibw_go[0] }}
+    name: MacOS 11 cp39,cp310,cp311 ${{ matrix.arch_cibw_go[0] }}
     strategy:
       fail-fast: false
       matrix:
@@ -36,7 +36,7 @@ jobs:
         env:
           CIBW_ARCHS: ${{ matrix.arch_cibw_go[0] }}
           CIBW_BUILD: "cp3*"
-          CIBW_SKIP: "cp36-*"
+          CIBW_SKIP: "cp36-* cp37-* cp38-*"
           CIBW_ENVIRONMENT: >
             PATH=$PATH:/usr/local/go/bin
             GOARCH=${{ matrix.arch_cibw_go[1] }}
