--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -9,10 +9,11 @@ on:
 jobs:
   build_macos_11:
     #if: false
-    name: MacOS 11 cp39,cp310,cp311 ${{ matrix.arch_cibw_go[0] }}
+    name: MacOS 11 ${{ matrix.python_version}} ${{ matrix.arch_cibw_go[0] }}
     strategy:
       fail-fast: false
       matrix:
+        python_version: [ "cp39", "cp310", "cp311" ]
         arch_cibw_go:
           - [ "x86_64", "amd64" ]
           - [ "arm64", "arm64" ]
@@ -31,12 +32,34 @@ jobs:
       - name: install goimports
         run: go install golang.org/x/tools/cmd/goimports@latest
 
+      - name: install python 3.9
+        if: matrix.python_version == 'cp39'
+        run: |
+          curl -o python.pkg https://www.python.org/ftp/python/3.9.12/python-3.9.12-macosx11.pkg
+          sudo installer -pkg python.pkg -target /
+          ln -s /usr/local/opt/python@3.9/bin/python3.9 /usr/local/bin/python_for_build
+          /usr/local/bin/python_for_build --version
+      - name: install python 3.10
+        if: matrix.python_version == 'cp310'
+        run: |
+          curl -o python.pkg https://www.python.org/ftp/python/3.10.8/python-3.10.8-macos11.pkg
+          sudo installer -pkg python.pkg -target /
+          ln -s /usr/local/opt/python@3.10/bin/python3.10 /usr/local/bin/python_for_build
+          /usr/local/bin/python_for_build --version
+      - name: install python 3.11
+        if: matrix.python_version == 'cp311'
+        run: |
+          curl -o python.pkg https://www.python.org/ftp/python/3.11.0/python-3.11.0-macos11.pkg
+          sudo installer -pkg python.pkg -target /
+          ln -s /usr/local/opt/python@3.11/bin/python3.11 /usr/local/bin/python_for_build
+          /usr/local/bin/python_for_build --version
+          
       - name: build wheels
         uses: pypa/cibuildwheel@v2.11.2
         env:
           CIBW_ARCHS: ${{ matrix.arch_cibw_go[0] }}
-          CIBW_BUILD: "cp3*"
-          CIBW_SKIP: "cp36-* cp37-* cp38-*"
+          PYTHON_BINARY_PATH: /usr/local/bin/python_for_build
+          CIBW_BUILD: "${{ matrix.python_version }}-*"
           CIBW_ENVIRONMENT: >
             PATH=$PATH:/usr/local/go/bin
             GOARCH=${{ matrix.arch_cibw_go[1] }}
