--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -35,7 +35,7 @@ jobs:
       - name: install python 3.9
         if: matrix.python_version == 'cp39'
         run: |
-          curl -o python.pkg https://www.python.org/ftp/python/3.9.12/python-3.9.12-macosx11.pkg
+          curl -o python.pkg https://www.python.org/ftp/python/3.9.12/python-3.9.12-macos11.pkg
           sudo installer -pkg python.pkg -target /
           ln -s /usr/local/opt/python@3.9/bin/python3.9 /usr/local/bin/python_for_build
           /usr/local/bin/python_for_build --version
@@ -54,8 +54,11 @@ jobs:
           ln -s /usr/local/opt/python@3.11/bin/python3.11 /usr/local/bin/python_for_build
           /usr/local/bin/python_for_build --version
           
+      - name: install cibuildwheel and pybindgen
+        run: /usr/local/bin/python_for_build -m pip install cibuildwheel==2.11.2 pybindgen
+
       - name: build wheels
-        uses: pypa/cibuildwheel@v2.11.2
+        run: /usr/local/bin/python_for_build -m cibuildwheel --output-dir wheelhouse
         env:
           CIBW_ARCHS: ${{ matrix.arch_cibw_go[0] }}
           PYTHON_BINARY_PATH: /usr/local/bin/python_for_build
