--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -36,11 +36,8 @@ jobs:
         if: matrix.python_version == 'cp39'
         run: |
           curl -o python.pkg https://www.python.org/ftp/python/3.9.12/python-3.9.12-macos11.pkg
-          pkgutil --expand python.pkg $TMPDIR/python1
-          pkgutil --expand $TMPDIR/python1/Python_Command_Line_Tools.pkg $TMPDIR/python2
-          ls -R $TMPDIR/python2
           sudo installer -pkg python.pkg -target /
-          ln -s /usr/local/opt/python@3.9/libexec/bin/python3.9 /usr/local/bin/python_for_build
+          ln -s /Library/Frameworks/Python.framework/Versions/3.9/bin/python3.9 /usr/local/bin/python_for_build
           /usr/local/bin/python_for_build --version
       - name: install python 3.10
         if: matrix.python_version == 'cp310'
