--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -35,7 +35,7 @@ jobs:
       - name: install python 3.9
         if: matrix.python_version == 'cp39'
         run: |
-          curl -o python.pkg https://www.python.org/ftp/python/3.9.12/python-3.9.12-macos11.pkg
+          curl -o python.pkg https://www.python.org/ftp/python/3.9.12/python-3.9.12-macosx10.9.pkg
           sudo installer -pkg python.pkg -target /
           ln -s /Library/Frameworks/Python.framework/Versions/3.9/bin/python3.9 /usr/local/bin/python_for_build
           /usr/local/bin/python_for_build --version
@@ -44,14 +44,14 @@ jobs:
         run: |
           curl -o python.pkg https://www.python.org/ftp/python/3.10.8/python-3.10.8-macos11.pkg
           sudo installer -pkg python.pkg -target /
-          ln -s /usr/local/opt/python@3.10/bin/python3.10 /usr/local/bin/python_for_build
+          ln -s /Library/Frameworks/Python.framework/Versions/3.10/bin/python3.10 /usr/local/bin/python_for_build
           /usr/local/bin/python_for_build --version
       - name: install python 3.11
         if: matrix.python_version == 'cp311'
         run: |
           curl -o python.pkg https://www.python.org/ftp/python/3.11.0/python-3.11.0-macos11.pkg
           sudo installer -pkg python.pkg -target /
-          ln -s /usr/local/opt/python@3.11/bin/python3.11 /usr/local/bin/python_for_build
+          ln -s /Library/Frameworks/Python.framework/Versions/3.11/bin/python3.11 /usr/local/bin/python_for_build
           /usr/local/bin/python_for_build --version
           
       - name: install cibuildwheel and pybindgen
