--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -7,13 +7,13 @@ on:
   workflow_dispatch:
 
 jobs:
-  build_macos_11_12_13:
+  build_macos_11_12:
     #if: false
     name: MacOS ${{ matrix.os_version }} ${{ matrix.python_version}} ${{ matrix.arch_cibw_go[0] }}
     strategy:
       fail-fast: false
       matrix:
-        os_version: [ 11, 12, 13 ]
+        os_version: [ 11, 12 ]
         python_version: [ "cp310", "cp311" ]
         arch_cibw_go:
           - [ "x86_64", "amd64" ]
@@ -36,15 +36,13 @@ jobs:
       - name: install python 3.10
         if: matrix.python_version == 'cp310'
         run: |
-          curl -o python.pkg https://www.python.org/ftp/python/3.10.8/python-3.10.8-macos11.pkg
-          sudo installer -pkg python.pkg -target /
+          brew install python@3.10
           ln -s /usr/local/opt/python@3.10/bin/python3.10 /usr/local/bin/python_for_build
           /usr/local/bin/python_for_build --version
       - name: install python 3.11
         if: matrix.python_version == 'cp311'
         run: |
-          curl -o python.pkg https://www.python.org/ftp/python/3.11.0/python-3.11.0-macos11.pkg
-          sudo installer -pkg python.pkg -target /
+          brew install python@3.11
           ln -s /usr/local/opt/python@3.11/bin/python3.11 /usr/local/bin/python_for_build
           /usr/local/bin/python_for_build --version
           
