--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -112,7 +112,7 @@ jobs:
 
   build_linux_x86_64:
     if: false
-    name: Linux cp38,cp39,cp310,cp311 x86_64
+    name: Linux cp37,cp38,cp39,cp310,cp311 x86_64
     runs-on: ubuntu-20.04
 
     steps:
@@ -141,7 +141,7 @@ jobs:
 
   build_linux_arm:
     if: false
-    name: Linux cp38,cp39,cp310,cp311 armv7l
+    name: Linux cp37,cp38,cp39,cp310,cp311 armv7l
     runs-on: ubuntu-latest
 
     steps:
@@ -179,7 +179,7 @@ jobs:
 
   build_windows:
     if: false
-    name: Windows cp38,cp39,cp310,cp311 x86_64
+    name: Windows cp37,cp38,cp39,cp310,cp311 x86_64
     runs-on: windows-2019
 
     steps:
