--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -8,16 +8,23 @@ on:
 
 jobs:
   build_macos_11_12:
-    if: !(${{ matrix.python3_version }} == 7 && ${{ matrix.arch_cibw_go[0] }} == "arm64")
+    if: false
     name: MacOS ${{ matrix.os_version }} cp3${{ matrix.python3_version }} ${{ matrix.arch_cibw_go[0] }}
     strategy:
       fail-fast: false
       matrix:
-        os_version: [ 11, 12 ]
+        os_version: [ 10.15, 11, 12 ]
         python3_version: [ 7, 8, 9, 10, 11 ]
         arch_cibw_go:
           - [ "x86_64", "amd64" ]
           - [ "arm64", "arm64" ]
+        exclude:
+          - os_version: 10.15
+            python3_version: 11
+          - os_version: 10.15
+            arch_cibw_go: [ "arm64", "arm64"]
+          - python3_version: 7
+            arch_cibw_go: [ "arm64", "arm64"]
     runs-on: macos-${{ matrix.os_version }}
     steps:
       - uses: actions/checkout@v3
