--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -3,7 +3,9 @@ name: Build
 on:
   push:
     branches: ["master"]
+    paths-ignore: ["pypi/**"]
   pull_request:
+    paths-ignore: ["pypi/**"]
   workflow_dispatch:
 
 jobs:
