--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build_macos:
-    #if: false
+    if: false
     name: MacOS ${{ matrix.os_version }} cp3${{ matrix.python3_version }} ${{ matrix.arch_cibw_go[0] }}
     strategy:
       fail-fast: false
@@ -69,7 +69,7 @@ jobs:
           path: ./wheelhouse/*.whl
 
   build_linux_x86_64:
-    #if: false
+    if: false
     name: Linux cp37,cp38,cp39,cp310,cp311 x86_64
     runs-on: ubuntu-20.04
 
@@ -97,8 +97,37 @@ jobs:
           name: wheels
           path: ./wheelhouse/*.whl
 
-  build_linux_arm:
+  build_linux_arm64:
     #if: false
+    name: Linux cp37,cp38,cp39,cp310,cp311 arm64
+    runs-on: ubuntu-20.04
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v2.11.2
+        env:
+          CIBW_BUILD: "cp3*_arm64"
+          CIBW_SKIP: "cp36-* *-musllinux_arm64"
+          CIBW_ARCHS: "native"
+          CIBW_ENVIRONMENT: >
+            PATH=$PATH:/usr/local/go/bin
+            CGO_ENABLED=1
+          CIBW_BEFORE_ALL_LINUX: |
+            curl -o go.tar.gz https://dl.google.com/go/go1.19.3.linux-arm64.tar.gz
+            tar -C /usr/local -xzf go.tar.gz
+            go install github.com/go-python/gopy@v0.4.5
+            go install golang.org/x/tools/cmd/goimports@latest
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: wheels
+          path: ./wheelhouse/*.whl
+
+  build_linux_arm32:
+    if: false
     name: Linux cp37,cp38,cp39,cp310,cp311 armv7l
     runs-on: ubuntu-latest
 
@@ -136,7 +165,7 @@ jobs:
           path: /tmp/output/*.whl
 
   build_windows:
-    #if: false
+    if: false
     name: Windows cp37,cp38,cp39,cp310,cp311 x86_64
     runs-on: windows-2019
 
