--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -108,8 +108,8 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.11.2
         env:
-          CIBW_BUILD: "cp3*_arm64"
-          CIBW_SKIP: "cp36-* *-musllinux_arm64"
+          CIBW_BUILD: "cp3*_aarch64"
+          CIBW_SKIP: "cp36-* *-musllinux_aarch64"
           CIBW_ARCHS: "native"
           CIBW_ENVIRONMENT: >
             PATH=$PATH:/usr/local/go/bin
