--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -97,7 +97,39 @@ jobs:
           name: wheels
           path: ./wheelhouse/*.whl
 
-  build_linux_arm:
+  build_linux_arm64:
+    #if: false
+    name: Linux cp37,cp38,cp39,cp310,cp311 arm64
+    runs-on: ubuntu-20.04
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v2.11.2
+        env:
+          CIBW_BUILD: "cp3*_aarch64"
+          CIBW_SKIP: "cp36-* *-musllinux_aarch64"
+          CIBW_ARCHS: "aarch64"
+          CIBW_ENVIRONMENT: >
+            PATH=$PATH:/usr/local/go/bin
+            CGO_ENABLED=1
+          CIBW_BEFORE_ALL_LINUX: |
+            curl -o go.tar.gz https://dl.google.com/go/go1.19.3.linux-arm64.tar.gz
+            tar -C /usr/local -xzf go.tar.gz
+            go install github.com/go-python/gopy@v0.4.5
+            go install golang.org/x/tools/cmd/goimports@latest
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: wheels
+          path: ./wheelhouse/*.whl
+
+  build_linux_armv7l:
     #if: false
     name: Linux cp37,cp38,cp39,cp310,cp311 armv7l
     runs-on: ubuntu-latest
